--- a/index.html
+++ b/index.html
@@ -363,12 +363,138 @@ function updateTransportTables() {
     }
 }
 
-
-
     function solveTransportProblem() {
-        document.getElementById('transport-solution-output').innerHTML = "Решение в процессе...";
-        // Реализация решения транспортной задачи будет добавлена позже
+    document.getElementById('transport-solution-output').innerHTML = "Решение в процессе...";
+
+    let totalSupply = 0;
+    let totalDemand = 0;
+
+    // Получаем все значения поставщиков
+    const supplyInputs = document.querySelectorAll("input[placeholder='Во']");
+    const supplyCount = supplyInputs.length; // Количество поставщиков
+    let supplies = [];
+
+    supplyInputs.forEach(input => {
+        let value = Number(input.value) || 0;
+        supplies.push(value);
+        totalSupply += value;
+    });
+
+    // Получаем все значения потребностей
+    const demandInputs = document.querySelectorAll("input[placeholder='П']");
+    const demandCount = demandInputs.length; // Количество потребителей
+    let demands = [];
+
+    demandInputs.forEach(input => {
+        let value = Number(input.value) || 0;
+        demands.push(value);
+        totalDemand += value;
+    });
+
+    console.log("Сумма поставщиков:", totalSupply);
+    console.log("Сумма потребителей:", totalDemand);
+    console.log("Массив поставщиков:", supplies);
+    console.log("Массив потребителей:", demands);
+
+    if (isNaN(totalSupply) || isNaN(totalDemand)) {
+        console.error("Ошибка: Введены некорректные данные.");
+        return;
     }
+
+    if (totalSupply !== totalDemand) {
+        document.getElementById('transport-solution-output').innerHTML = "Транспортная задача несбалансирована!";
+        return;
+    }
+
+    // Здесь будет реализация метода минимального элемента
+    document.getElementById('transport-solution-output').innerHTML = "Запускаем алгоритм...";
+
+    // Далее вызываем метод решения (например, метод минимального элемента)
+    solveByMinElementMethod(supplies, demands, supplyCount, demandCount);
+}
+
+function solveByMinElementMethod(supplies, demands, supplyCount, demandCount) {
+    console.log("Запущен метод минимального элемента");
+    console.log("Поставщики:", supplies);
+    console.log("Потребители:", demands);
+
+    // Получаем матрицу стоимости перевозок
+    let costInputs = document.querySelectorAll(".cost-input");
+    let costMatrix = [];
+    let index = 0;
+
+    for (let i = 0; i < supplyCount; i++) {
+        let row = [];
+        for (let j = 0; j < demandCount; j++) {
+            row.push(Number(costInputs[index].value) || 0);
+            index++;
+        }
+        costMatrix.push(row);
+    }
+
+    console.log("Матрица стоимости:", costMatrix);
+
+    // Инициализация матрицы распределений (изначально заполнена нулями)
+    let allocation = Array.from({ length: supplyCount }, () => Array(demandCount).fill(0));
+
+    // Алгоритм минимального элемента
+    while (supplies.some(s => s > 0) && demands.some(d => d > 0)) {
+        // Находим минимальный элемент в матрице стоимости
+        let minCost = Infinity;
+        let minI = -1, minJ = -1;
+
+        for (let i = 0; i < supplyCount; i++) {
+            for (let j = 0; j < demandCount; j++) {
+                if (supplies[i] > 0 && demands[j] > 0 && costMatrix[i][j] < minCost) {
+                    minCost = costMatrix[i][j];
+                    minI = i;
+                    minJ = j;
+                }
+            }
+        }
+
+        // Определяем, сколько можно отправить
+        let quantity = Math.min(supplies[minI], demands[minJ]);
+        allocation[minI][minJ] = quantity;
+
+        // Обновляем остатки
+        supplies[minI] -= quantity;
+        demands[minJ] -= quantity;
+
+        // Выводим таблицу после каждого шага
+        displayTable(allocation, costMatrix, `Шаг решения (выбрана ячейка [${minI + 1}, ${minJ + 1}])`);
+    }
+
+    // Выводим итоговое решение
+    displayFinalSolution(allocation, costMatrix);
+}
+
+// Функция для вывода окончательного решения
+function displayFinalSolution(allocation, costs) {
+    const outputDiv = document.getElementById('transport-solution-output');
+    let totalCost = 0;
+
+    let tableHTML = `<h3>Итоговое распределение</h3><table class='table table-bordered'><tr><th></th>`;
+
+    for (let j = 0; j < allocation[0].length; j++) {
+        tableHTML += `<th>Потребитель ${j + 1}</th>`;
+    }
+    tableHTML += `</tr>`;
+
+    for (let i = 0; i < allocation.length; i++) {
+        tableHTML += `<tr><th>Поставщик ${i + 1}</th>`;
+        for (let j = 0; j < allocation[i].length; j++) {
+            tableHTML += `<td>${allocation[i][j]} (${costs[i][j]})</td>`;
+            totalCost += allocation[i][j] * costs[i][j];
+        }
+        tableHTML += `</tr>`;
+    }
+    tableHTML += `</table>`;
+
+    tableHTML += `<h4>Общая стоимость перевозки: ${totalCost}</h4>`;
+    outputDiv.innerHTML += tableHTML;
+}
+
     </script>
 </head>
 <body class="container mt-4">
